[add] function rejecting entry when empty

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Socket.IO chat</title>
+    <title>YMDA chatting room</title>
     <style>
       * {  margin: 0, padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
@@ -14,23 +14,25 @@
     </style>
   </head>
   <body>
-    <script>
-      const name=prompt("Give me your name please!");
-    </script>
+  <a>下のフォームに書きたいことを書きましょう。</a>
     <ul id="messages"></ul>
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <!--<script src="submit.js"></script>-->
   <script>
     $(function () {
       var socket = io();
       $('form').submit(function(e) {
         e.preventDefault(); // prevents page reloading
+        prompt("what is your name");
+        if ($('#m').val()!=""){
         socket.emit('chat message', $('#m').val());
         $('#m').val('');
         return false;
+        }
       });
       socket.on('chat message', function(msg){
         $('#messages').append($('<li>').text(msg));
