--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>YMDA chatting room</title>
+    <link rel="stylesheet" href="index.css">
+    <!--
     <style>
       * {  margin: 0, padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
@@ -12,6 +14,7 @@
       #messages li { padding: 5px 10px; }
       #messages li:nth-child(odd) { background: #eee; }
     </style>
+    -->
   </head>
   <body>
   <a>下のフォームに書きたいことを書きましょう。</a>
